kill old pid on start